M3s-ms-mm/ms-api/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-api
  namespace: ms-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-api
  template:
    metadata:
      labels:
        app: ms-api
    spec:
      containers:
        - name: ms-api
          image: devopspcs/ms-api-go:latest
          ports:
            - containerPort: 8002
          volumeMounts:
            - name: gcp-credentials
              mountPath: /app/service_account_credential.json
              subPath: service_account_credential.json
              readOnly: true
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
      volumes:
        - name: gcp-credentials
          secret:
            secretName: ms-api-gcp-credentials
      imagePullSecrets:
        - name: dockerhub-pull
