M3s-ms-mm/ms-api/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-api
  namespace: ms-api
spec:
  type: ClusterIP
  selector:
    app: ms-api
  ports:
    - name: http
      port: 8002
      targetPort: 8002
