M3s-ms-mm/ms-api/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-api
  namespace: ms-api
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: development-ms-m3sbri-api.pcsindonesia.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ms-api
                port:
                  number: 8002
